fix overflow text in pre and code tags

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ legend {
 
 pre, code {
     background-color: white;
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word;      /* IE */
 }
 
 pre, code, pre *, code * {
